--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Service APP CI
+name: Java CI with Maven
 
 on:
   push:
@@ -6,10 +6,14 @@ on:
   pull_request:
     branches: [ "main", "develop" ]
 
+concurrency:
+  group: ci-${{ github.ref }}-group
+  cancel-in-progress: true
+
 jobs:
-  test:
+  test-and-build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,9 +28,21 @@ jobs:
       - name: Run tests with Maven
         run: mvn clean test
 
-      - name: Upload test reports (optional)
+      - name: Build JAR package
+        if: success()
+        run: mvn clean package -DskipTests
+
+      - name: Upload JAR artifact
+        if: success()
         uses: actions/upload-artifact@v4
+        with:
+          name: price-service-jar
+          path: target/*.jar
+          retention-days: 7
+
+      - name: Upload test reports
         if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: |
