--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,8 @@ jobs:
       - name: Run Spectral validation
         uses: stoplightio/spectral-action@master
         with:
-          file: docs/oapi.yaml
+          file_glob: docs/oapi.yaml
           spectral_ruleset: spectral:oas/recommended
-          fail_on: error
   test-and-build:
     runs-on: ubuntu-latest
 
