--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,17 @@ jobs:
           fi
           echo "✅ Found docs/oapi.yaml"
 
-      - name: Run Spectral validation
-        uses: stoplightio/spectral-action@latest
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          file_glob: docs/oapi.yaml
-          args: lint docs/oapi.yaml --ruleset oas
-  
+          node-version: '18'
+
+      - name: Install OpenAPI CLI
+        run: npm install -g @redocly/openapi-cli
+
+      - name: Lint OpenAPI spec
+        run: openapi lint docs/oapi.yaml
+
   test-and-build:
     runs-on: ubuntu-latest
 
