--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 logging.level.org.hibernate.SQL=DEBUG
 
 # Other Configuration
