improved 500 error handling, added message to 500 error and updated oapi.yaml

--- a/docs/oapi.yaml
+++ b/docs/oapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.4
+openapi: 3.1.4
 info:
   title: Price Service API
   version: 0.0.1-SNAPSHOT
@@ -30,7 +30,7 @@ paths:
             type: string
             format: date-time
             pattern: '^\d{4}-\d{2}-\d{2}-\d{2}\.\d{2}\.\d{2}$'
-            example: "2024-06-14-15.00.00"
+            example: "2020-06-14-10.00.00"
         - name: product_id
           in: query
           description: Unique identifier of the product
@@ -56,29 +56,88 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/PriceResponse"
-          headers:
-            Content-Type:
+        '400':
+          description: Bad Request - Invalid parameters or format
+          content:
+            application/json:
               schema:
-                type: string
-                example: application/json
+                "$ref": "#/components/schemas/ErrorResponse"
+              example:
+                timestamp: "2020-06-14T10:00:00"
+                status: 400
+                error: "Bad Request"
+                message: "Failed to convert value of type 'java.lang.String' to required type 'java.time.LocalDateTime'"
+        '404':
+          description: Price not found for the given criteria
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ErrorResponse"
+              example:
+                timestamp: "2020-06-14T10:00:00"
+                status: 404
+                error: "Not Found"
+                message: "No price found for given parameters: 2020-06-14T10:00:00, 35455, 1."
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ErrorResponse"
+              example:
+                timestamp: "2020-06-14T10:00:00"
+                status: 500
+                error: "Internal Server Error"
+                message: "JDBC Connection Exception: Unable to acquire JDBC Connection"
 
 components:
   schemas:
     PriceResponse:
       type: object
       properties:
+        priceListId:
+          type: integer
+          format: int64
+          description: Identifier of the applied price list
+          example: 1
         productId:
           type: integer
           format: int64
+          example: 35455
         brandId:
           type: integer
           format: int64
+          example: 1
         startDate:
           type: string
           format: date-time
+          example: "2020-06-14T00:00:00"
         endDate:
           type: string
           format: date-time
+          example: "2020-12-31T23:59:59"
         finalPrice:
           type: number
           format: double
+          example: 35.50
+
+    ErrorResponse:
+      type: object
+      description: Standard error response structure
+      properties:
+        timestamp:
+          type: string
+          format: date-time
+          example: "2020-06-14T10:00:00"
+        status:
+          type: integer
+          description: HTTP status code
+          example: 500
+        error:
+          type: string
+          description: Short error description
+          example: "Internal Server Error"
+        message:
+          type: string
+          description: Detailed error message
+          example: "JDBC Connection Exception: Unable to acquire JDBC Connection"
