--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,19 @@ jobs:
       - name: Lint OpenAPI spec
         run: openapi lint docs/oapi.yaml
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Lint Java Code (Checkstyle)
+        run: mvn checkstyle:check
+
   test-and-build:
     runs-on: ubuntu-latest
+    needs: validate  # Don't run tests if linting fails!
 
     steps:
       - name: Checkout code
